--- a/cep/static/css/cepapp.css
+++ b/cep/static/css/cepapp.css
@@ -1,5 +1,5 @@
 html{
-    color: aqua;
+    color: rgb(0, 0, 0);
     font-size: 500px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Do Hyeon', sans-serif;
 }
