--- a/cep/templates/home.html
+++ b/cep/templates/home.html
@@ -1,10 +1,16 @@
-{% load static %}
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
     <link rel="stylesheet" href="{% static 'css/cepapp.css' %}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Do+Hyeon&display=swap" rel="stylesheet">
+
     <title>Endereço via CEP</title>
 </head>
 <body>
