front bem encaminhado

--- a/cep/templates/home.html
+++ b/cep/templates/home.html
@@ -14,7 +14,13 @@
     <title>Endereço via CEP</title>
 </head>
 <body>
-    Pedro
+    <div id="central">
+        Encontre seu endereço:
+        <span>Digite seu CEP e te buscaremos seu endereço.</span>
+        <div id="inputs"> 
+            <input type="text" name="cepinput" id="cepinput" placeholder="Digite seu cep aqui..."> <input type="button" value="ENCONTRAR" id="botaoenviar" name="ENCONTRAR">
+        </div>
+    </div>
 
     
 </body>
