--- a/cep/static/css/cepapp.css
+++ b/cep/static/css/cepapp.css
@@ -1,5 +1,44 @@
 html{
-    color: rgb(0, 0, 0);
-    font-size: 500px;
+    color: white;
+    font-size: 100px;
     font-family: 'Do Hyeon', sans-serif;
+    background-image: url(../imagens/mapa-fundo.png);
+}
+
+#central{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    height: 100vh;
+    text-shadow: 
+        -2px -2px 0 black,
+         2px -2px 0 black,
+        -2px 2px 0 black,
+         2px 2px 0 black;
+}
+
+#central span{
+    font-size: 50px;
+}
+
+#central #inputs{
+    width: 65%;
+    font-family: 'Do Hyeon', sans-serif;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+#central #botaoenviar{
+    font-family: 'Do Hyeon', sans-serif;
+}
+
+#central #cepinput{
+    width: 100%;
+    height: 40px;
+    font-family: 'Do Hyeon', sans-serif;
+    font-size: 40px;
 }
