--- a/cep/static/css/cepapp.css
+++ b/cep/static/css/cepapp.css
@@ -24,6 +24,7 @@ html{
 }
 
 #central #inputs{
+
     width: 65%;
     font-family: 'Do Hyeon', sans-serif;
     display: flex;
@@ -36,9 +37,16 @@ html{
     font-family: 'Do Hyeon', sans-serif;
 }
 
-#central #cepinput{
+#cepinput{
     width: 100%;
     height: 40px;
     font-family: 'Do Hyeon', sans-serif;
     font-size: 40px;
+}
+
+#inputs form{
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+    width: 100%;
 }
